--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -14,6 +14,8 @@
 	<body>
 		<noscript>⚠ JavaScript is required to use this app. ⚠</noscript>
 		<div id="root"></div>
+		<div id="backdrop"></div>
+        <div id="modal"></div>
 	</body>
 
 </html>
